fix flickering

--- a/express/blocks/holiday-blade/holiday-blade.css
+++ b/express/blocks/holiday-blade/holiday-blade.css
@@ -19,6 +19,14 @@ main .holiday-blade.light {
     color: var(--text-color)
 }
 
+
+main .holiday-blade > div:nth-of-type(1):not(.content-loaded),
+main .holiday-blade > div:nth-of-type(2):not(.content-loaded),
+main .holiday-blade > div:nth-of-type(3):not(.content-loaded),
+main .holiday-blade > div:nth-of-type(4):not(.content-loaded) {
+    display: none;
+}
+
 main .holiday-blade video {
     position: absolute;
     top: 0;
